syntax = "proto3";

package communication;

service ReplicationService { 
  rpc PropagateData(PropagateDataRequest) returns (PropagateDataResponse);

  rpc GossipChanges(GossipChangesRequest) returns (GossipChangesResponse);

  rpc GossipBatch(GossipBatchRequest) returns (GossipBatchResponse);
}

message PropagateDataRequest {
  string valuetype = 1;
  string key = 2;
  bytes value = 3;
}

message PropagateDataResponse {
  bool success = 1;
}

message PNCounterMessage {
  map<string, uint64> p = 1;
  map<string, uint64> n= 2;
}

message GossipChangesRequest {
  string key = 1;

  // We should use an enum representing the CRDTs instead of directly specifying them directly
  PNCounterMessage counter = 2;
}

message GossipChangesResponse {
  bool success = 1;
}

message GossipBatchRequest {
  map<string, PNCounterMessage> batch = 1;
}

message GossipBatchResponse {
  bool success = 1;
}
